# gmock-cmake

./: .gitmodules  .travis.yml  AddSimpleGTestHelper.cmake  CMakeLists.txt  CheckForGoogleMockCompilerFlags.cmake  DEPENDENCIES  DICTIONARY  FindGMOCK.cmake  FindGoogleMock.cmake  GMockImport.cmake  GoogleMockLibraryUtils.cmake  PACKAGES.Ubuntu.precise  README.md  appveyor.yml  biicode.conf  conanfile.py
test/: AddSimpleGTestHelper.cmake  AlwaysDownloadSourcesCreatesExternalProject.cmake  AlwaysDownloadSourcesCreatesExternalProjectVerify.cmake  CMakeLists.txt  CheckForCompilerFlagsVerify.cmake  CompilerFlagsPassedForExternalProjectBuild.cmake  CompilerFlagsPassedForExternalProjectBuildVerify.cmake  CompilerFlagsPassedForSourceBuildOfGMock.cmake  CompilerFlagsPassedForSourceBuildOfGTest.cmake  DownloadSVNDoesNotUpdateByDefault.cmake  DownloadSVNDoesNotUpdateByDefaultVerify.cmake  DownloadSVNRunsSVNCheckout.cmake  DownloadSVNRunsSVNCheckoutVerify.cmake  DownloadVersion170UnpacksReleaseTarball.cmake  DownloadVersion170UnpacksReleaseTarballVerify.cmake  ForceUpdatesOptionAllowsUpdate.cmake  ForceUpdatesOptionAllowsUpdateVerify.cmake  FromParentInExternalProject.cmake  FromParentInExternalProjectVerify.cmake  GetBuildDirectorySuffixForGeneratorHelper.cmake  GetTargetLocationFromExportsHelper.cmake  GoogleMockExternalProject.cmake  GoogleMockExternalProjectVerify.cmake  PreferSourceBuildForBoth.cmake  PreferSourceBuildForBothVerify.cmake  PreferSourceBuildForGMock.cmake  PreferSourceBuildForGMockVerify.cmake  PreferSourceBuildForGTest.cmake  PreferSourceBuildForGTestVerify.cmake
